debug 1243